# Linux-Application_CXX

./: .clang-tidy  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: autosar-clang-tidy.yml  cmake-multi-platform.yml
Include/: EncapsulationBankAccount.h
Src/: Autosar_PR_Violations.cpp  BankAccount.cpp  Class_Object.cpp  EncapsulationBankAccount.cpp  InheritanceVehicleCar.cpp  main.cpp
Test/: EncapsulationBankAccount_Test.cpp
src/: main.cpp
